{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 2227,
  "lineage": "51473659-072b-eb93-4fd4-1c2f528ea496",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d28d182cbe86004a",
            "arn": "arn:aws:ec2:ap-south-1:116399837913:elastic-ip/eipalloc-0d28d182cbe86004a",
            "association_id": "eipassoc-0c9fb0bc9e512f7fa",
            "domain": "vpc",
            "id": "eipalloc-0d28d182cbe86004a",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-029a410b18e3639f7",
            "private_dns": "ip-10-0-70-158.ap-south-1.compute.internal",
            "private_ip": "10.0.70.158",
            "public_dns": "ec2-13-202-47-93.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.47.93",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:116399837913:internet-gateway/igw-0a9da992a5d049e84",
            "id": "igw-0a9da992a5d049e84",
            "owner_id": "116399837913",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0a7bdd1631bf0faae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d28d182cbe86004a",
            "association_id": "eipassoc-0c9fb0bc9e512f7fa",
            "connectivity_type": "public",
            "id": "nat-0cf100f4a748fb093",
            "network_interface_id": "eni-029a410b18e3639f7",
            "private_ip": "10.0.70.158",
            "public_ip": "13.202.47.93",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-051d78025b7ecee9f",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public-ap-south-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:116399837913:route-table/rtb-06ad30653907dc9e2",
            "id": "rtb-06ad30653907dc9e2",
            "owner_id": "116399837913",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cf100f4a748fb093",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7bdd1631bf0faae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-ap-south-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:116399837913:route-table/rtb-0df85a26521aa7ec0",
            "id": "rtb-0df85a26521aa7ec0",
            "owner_id": "116399837913",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a9da992a5d049e84",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7bdd1631bf0faae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ap-south-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b26cd7d54d947fc0",
            "route_table_id": "rtb-06ad30653907dc9e2",
            "subnet_id": "subnet-0ced2131fe1b9ea9f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-ap-south-1a",
            "aws_subnet.public-ap-south-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ap-south-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033c89317cff48cc4",
            "route_table_id": "rtb-06ad30653907dc9e2",
            "subnet_id": "subnet-0e3bce589a090094f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-ap-south-1b",
            "aws_subnet.public-ap-south-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-ap-south-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05de764ec6432b7c7",
            "route_table_id": "rtb-0df85a26521aa7ec0",
            "subnet_id": "subnet-051d78025b7ecee9f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-ap-south-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-ap-south-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08dd141c3419fcf23",
            "route_table_id": "rtb-0df85a26521aa7ec0",
            "subnet_id": "subnet-0e28e593ee946df23"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-ap-south-1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:116399837913:security-group/sg-01e5e921745987ff7",
            "description": "Security Group for EKS Node Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-01e5e921745987ff7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eks-node-group-20250108175115625000000001",
            "name_prefix": "eks-node-group-",
            "owner_id": "116399837913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-node-sg"
            },
            "tags_all": {
              "Name": "eks-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7bdd1631bf0faae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-ap-south-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:116399837913:subnet/subnet-0ced2131fe1b9ea9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ced2131fe1b9ea9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116399837913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-ap-south-1a",
              "kubernetes.io/cluster/nutrition": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-ap-south-1a",
              "kubernetes.io/cluster/nutrition": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a7bdd1631bf0faae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-ap-south-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:116399837913:subnet/subnet-0e3bce589a090094f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3bce589a090094f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116399837913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-ap-south-1b",
              "karpenter.sh/discovery": "nutrition",
              "kubernetes.io/cluster/nutrition": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-ap-south-1b",
              "karpenter.sh/discovery": "nutrition",
              "kubernetes.io/cluster/nutrition": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a7bdd1631bf0faae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-ap-south-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:116399837913:subnet/subnet-051d78025b7ecee9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051d78025b7ecee9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "116399837913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-ap-south-1a",
              "kubernetes.io/cluster/nutrition": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-ap-south-1a",
              "kubernetes.io/cluster/nutrition": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a7bdd1631bf0faae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-ap-south-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:116399837913:subnet/subnet-0e28e593ee946df23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e28e593ee946df23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "116399837913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-ap-south-1b",
              "kubernetes.io/cluster/nutrition": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-ap-south-1b",
              "kubernetes.io/cluster/nutrition": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a7bdd1631bf0faae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:116399837913:vpc/vpc-0a7bdd1631bf0faae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e00aa45094e8ae70",
            "default_route_table_id": "rtb-0eecce9008698e6c8",
            "default_security_group_id": "sg-029ec8283ef9977c0",
            "dhcp_options_id": "dopt-083526aa89e2c5fa0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a7bdd1631bf0faae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eecce9008698e6c8",
            "owner_id": "116399837913",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}